@startuml
'https://plantuml.com/class-diagram

hide circle

package ts {
    class Timesheet {
        project : Project [*]
        vf:provider : foaf:Agent
    }

    note right of Timesheet::vf:provider
      in Timeld, the provider
      is entailed as the
      timesheet account owner
    end note

    Timesheet "1" *-- "*" Entry

    class Entry {
        activity : xsd:string
        hourlyRate : hourlyRate
        vf:provider : foaf:Agent
        start : xsd:dateTime
        duration : xsd:decimal
    }

    note left of Entry::hourlyRate
        hourlyRate still
        to be elaborated
    end note

    note left of Entry::duration
        fractional minutes
        could also be a sub-property
        of vf:effortQuantity
    end note

    "vf:Action" <|-- Entry

    Entry o-- "1" "foaf:Agent"

    class Project {
        start : xsd:dateTime
        duration : xsd:decimal
        milestone : xsd:string
        client : foaf:Agent [0..1]
        vf:provider : foaf:Agent
    }
    note right of Project::client
      client property is
      also a sub-property
      of vf:receiver

      in Timeld, it is entailed
      as the owning account
      (and so, always exists)
    end note

    note right of Project::vf:provider
      only timesheets from
      these providers can be
      added to this project
    end note

    Timesheet "*" -- "*" Project

    class foaf:Agent {
        foaf:name : xsd:string
    }

    Project "*" -- "0..1" "foaf:Agent": client
    Project "*" -- "*" "foaf:Agent": vf:provider
}

@enduml